--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,6 @@ diesel = { version = "2.0.3", features = ["postgres"] }
 async-recursion = "1.0.2"
 actix-web = "4.3.0"
 serde_json = "1.0.93"
+reqwest = { version = "0.11", features = ["blocking", "json"] }
 
 
