--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,4 @@ async-recursion = "1.0.2"
 actix-web = "4.3.0"
 serde_json = "1.0.93"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
-
-
+ethers = "1.0.2"
