--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ gql_client = "1.0.7"
 serde ={version = "1.0.152", features = ["derive"]}
 tokio = {version = "1.25.0", features = ["full"]}
 diesel = { version = "2.0.3", features = ["postgres"] }
+diesel_migrations = "2.0.0"
 async-recursion = "1.0.2"
 actix-web = "4.3.0"
 serde_json = "1.0.93"
